Fix home page scaling and wrapping for small devices (#163)
* Fix home page scaling and wrapping for small devices

* Rework to use flex properties

This is quite a bit cleaner

* Fix image max width on desktop

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,9 +1,23 @@
 .home-columns {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 }
 
 .home-text {
 	font-size: 22px;
+	flex-shrink: 2;
+}
+
+.home-image {
+	max-width: 450px;
+}
+
+@media screen and (max-width: 768px) {
+	.home-columns {
+		flex-wrap: wrap;
+	}
+
+	.home-image {
+		max-width: 100%;
+	}
 }
